crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__format_parser_keyword.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
assertion_line: 195
expression: format
---
Format {
    elements: [
        Field(
            "result",
            Name,
        ),
        Token(
            [
                Equal,
            ],
        ),
        Keyword(
            "add",
        ),
        Field(
            "lhs",
            Default,
        ),
        Token(
            [
                Comma,
            ],
        ),
        Field(
            "rhs",
            Default,
        ),
        Token(
            [
                Arrow,
            ],
        ),
        Field(
            "result",
            Type,
        ),
    ],
}
