crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__format_parser_keyword_only.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
assertion_line: 203
expression: format
---
Format {
    elements: [
        Keyword(
            "ret",
        ),
        Field(
            "0",
            Default,
        ),
    ],
}
