crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__format_parser_positional.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Field(
            "0",
            Name,
        ),
        Token(
            [
                Equal,
                Identifier(
                    "add",
                ),
            ],
        ),
        Field(
            "1",
            Default,
        ),
        Token(
            [
                Comma,
            ],
        ),
        Field(
            "2",
            Default,
        ),
        Token(
            [
                Arrow,
            ],
        ),
        Field(
            "0",
            Type,
        ),
    ],
}
