crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__function_name_projection.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
assertion_line: 304
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "fn",
                ),
            ],
        ),
        Field(
            "function",
            Function(
                Name,
            ),
        ),
        Token(
            [
                LParen,
            ],
        ),
        Field(
            "body",
            Body(
                Ports,
            ),
        ),
        Token(
            [
                RParen,
                Arrow,
            ],
        ),
        Field(
            "body",
            Body(
                Yields,
            ),
        ),
    ],
}
