crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__optional_section_multiple.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
assertion_line: 486
expression: format
---
Format {
    elements: [
        Keyword(
            "op",
        ),
        Field(
            "x",
            Default,
        ),
        Optional(
            [
                Token(
                    [
                        Arrow,
                    ],
                ),
                Field(
                    "a",
                    Type,
                ),
            ],
        ),
        Optional(
            [
                Token(
                    [
                        Arrow,
                    ],
                ),
                Field(
                    "b",
                    Type,
                ),
            ],
        ),
    ],
}
