crates/kirin-derive-chumsky/src/snapshots/kirin_derive_chumsky__format__tests__signature_projections.snap
---
source: crates/kirin-derive-chumsky/src/format.rs
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "fn",
                ),
            ],
        ),
        Context(
            Name,
        ),
        Token(
            [
                LParen,
            ],
        ),
        Field(
            "sig",
            Signature(
                Inputs,
            ),
        ),
        Token(
            [
                RParen,
                Arrow,
            ],
        ),
        Field(
            "sig",
            Signature(
                Return,
            ),
        ),
        Field(
            "body",
            Default,
        ),
    ],
}
